--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,8 @@ body
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
-    margin: 0.9em;
+    margin: 0.2em;
+    padding: 0.8em;
 }
 
 #cabecera #tagline
